--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #fb6161;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +35,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+button {
+  color: green;
+}
+
+.container-here {
+  width: 100px;
+  background-color: blue;
+  color: white;
 }
